# AI_GPU

./: .gitignore  README.md
neural_network_gpu/: CMakeLists.txt  build  main.cu
neural_network_gpu/model/: trained_model.txt
neural_network_gpu/src/components/: device.cu  device.h  fp16_conversion.h  helper.cu  helper.h  mnist_data.h  network.cu  network.h  network_param_file_writer.cpp  network_param_file_writer.cu  network_param_file_writer.h
neural_network_gpu/src/layers/: fc_layer.cu  fc_layer.h  layer.h  softmax_layer.cu  softmax_layer.h
